yaml/unifi/03-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi
  labels:
    app.kubernetes.io/name: unifi
spec:
  replicas: 1
  serviceName: unifi
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9130"
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      serviceAccountName: unifi
      hostNetwork: true
      containers:
        - name: controller
          image: "linuxserver/unifi-controller:6.2.26-ls114"
          ports:
            - containerPort: 3478
              protocol: UDP
              name: stun
            - containerPort: 10001
              protocol: UDP
              name: discovery
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
            - containerPort: 6789
          volumeMounts:
            - mountPath: /config
              name: data
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 700Mi
        - name: poller
          image: "golift/unifi-poller:2.1.3"
          imagePullPolicy: IfNotPresent
          ports:
          - name: metrics
            containerPort: 9130
            protocol: TCP
          volumeMounts:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      tolerations:
        - effect: NoSchedule
          operator: Exists
      nodeSelector:
        kubernetes.io/role: worker
        kubernetes.io/hostname: rpi-k3s-worker1
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
