yaml/unifi/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  labels:
    app: unifi
  annotations:
    metallb.universe.tf/address-pool: morphine
spec:
  ports:
    - name: stun
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: discovery
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: unifi
  externalIPs:
    - "10.0.0.11"
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-poller
  labels:
    app: unifi
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9130
      targetPort: metrics
      protocol: TCP
  selector:
    app: unifi
