yaml/unifi/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  annotations:
    #kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik-lb
  rules:
    - host: unifi.k3s.shpaq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port: 
                  number: 8443
  tls:
    - hosts:
        - unifi.k3s.shpaq.org
      secretName: unifi-k3s-shpaq-org-tls
